@@ -1,3 +1,10 @@
+2007-07-29  Thomas Wood  <thos@gnome.org>
+
+	* gnome-theme-apply.c: (gnome_meta_theme_set):
+	* gtkrc-utils.c: (gtkrc_get_details), (gtkrc_get_color_scheme):
+
+	Prevent some memory leaks
+
 2007-07-28  Denis Washington  <denisw@svn.gnome.org>
 
 	* gnome-theme-info.h:
