@@ -1,5 +1,10 @@
 2007-07-29  Thomas Wood  <thos@gnome.org>
 
+	* appearance-style.c: (cursor_theme_sort_func), (prepare_list),
+	(style_init): Prevent some memory leaks
+
+2007-07-29  Thomas Wood  <thos@gnome.org>
+
 	* theme-installer.c: (file_theme_type), (gnome_theme_install_real):
 	- Fix theme installation (free called before last last use of a string)
 	- Update icon cache when installing icon themes (closes bug 355486)
